# Magnanimity

./: CMakeLists.txt  Magnanimity.cpp  Magnanimity.h  Magnanimity.xlsx  README.md  md5.cpp  md5.h
